2010-01-31 Borut Razem <borut.razem AT siol.net>

	* sdas/linksrc/Makefile.in, sdas/linksrc/lklibr.c, sdas/linksrc/lkar.c,
	  sdas/linksrc/lksdcclib.c, sdas/linksrc/lklib.c, sdas/linksrc/lkrel.c,
	  sdas/linksrc/aslink.h: added support for sdcclib and ar libraries
	* sdas/linksrc/README: removed

2010-01-24 Borut Razem <borut.razem AT siol.net>

	* all.dsp, sdas/as6808/as_hc08.dsp, sdas/as8051/asx8051.dsp,
	  sdas/as8xcxxx/as8xcxxx.dsp, sdas/asgb/asgb.dsp,
	  sdas/asz80/as_z80.dsp, sdas/linksrc/aslink.dsp, sdcc.dsw:
	  asapted VS project files for sdas v50
	* src/z80/gen.c: fixed declaration in the middle of the block
	* sdas/as8051/i51pst.c, sdas/asz80/z80pst.c, sdas/linksrc/lkdata.c,
	  sdas/linksrc/Makefile.in, sdas/linksrc/lkmain.c, sdas/linksrc/aslink.h,
	  sdas/as6808/m08pst.c, sdas/asxxsrc/asxxxx.h, sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asout.c, sdas/asxxsrc/asdata.c, sdas/asgb/gbpst.c,
	  sdas/as8xcxxx/ds8pst.c: added .optsdcc directive

2010-01-19 Borut Razem <borut.razem AT siol.net>

	* sdas/*/*ext.c: removed from svn
	* as8xcxxx/*: added
	* added missing *.asm, *.bat, *.sfr, ... files from ASxxxx package

2010-01-19 Borut Razem <borut.razem AT siol.net>

	* sdas/*: overwritten by files from ASxxxx V50

2010-01-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, sdas/linksrc/lkmain.c, sdas/linksrc/aslink.h:
	  fixed bug #2933892 - Weird default ouput location for linker - regression

2010-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c:
	  Taking the address of _Bool works on the z80 and gbz80 ports.

2010-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCcse.c,
	  src/SDCCicode.c,
	  src/SDCCglue.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  device/include/stdbool.h,
	  device/lib/z80/crt0.s:
	  Support for bool on the Z80 (RFE #1751355).
	* device/lib/z80/asm_strings.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80/stubs.s,
	  device/lib/z80/fstubs.s,
	  device/lib/z80/heap.s,