@@ -42,14 +42,14 @@ is_rel (FILE * libfp)
   long pos = ftell (libfp);
   int ret = 0;
 
-  /* [XDQ][HL] */
+  /* [XDQ][HL][234] */
   if (((c = getc (libfp)) == 'X' || c == 'D' || c == 'Q') && ((c = getc (libfp)) == 'H' || c == 'L'))
     {
       switch (getc (libfp))
         {
-	case 2:
-	case 3:
-	case 4:
+	case '2':
+	case '3':
+	case '4':
           switch (getc (libfp))
             {
             case '\r':
